# script-wizard

./: Cargo.toml  LICENSE.txt  README.md  flake.nix  install.sh  script_wizard_test.bb  test.sh
.github/workflows/: release.yml  tag.yml
babashka/: README.md
babashka/examples/: editor.bb  menu.bb  test.bb
babashka/src/: script_wizard.clj
src/: ask.rs  example.rs  lib.rs  main.rs  pod.rs
src/script_wizard/: core.bb
test/: script_wizard_test.bb
