[package]
name = "script-wizard"
version = "0.1.32"
edition = "2021"
authors = ["EnigmaCurry"]
documentation = "https://docs.rs/script-wizard"
repository = "https://github.com/EnigmaCurry/script-wizard"
license = "MIT"
keywords = ["bash", "shell-script"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.3.23", features = ["derive", "env"] }
custom_error = "1.9.2"
inquire = { version = "0.7.5", features = ["date", "editor"]}
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
